[gd_scene load_steps=5 format=3 uid="uid://c477qukem6kmd"]

[ext_resource type="Script" uid="uid://bhd4rr0otlir4" path="res://scenes/card_target_selector.gd" id="1_4nd48"]
[ext_resource type="PackedScene" uid="uid://bnmok7pwe3rwt" path="res://scenes/card_arc.tscn" id="1_c07u4"]
[ext_resource type="Script" uid="uid://dkh85gg5h2h4t" path="res://scenes/card_target_selector_area.gd" id="2_m6un0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_66gff"]
size = Vector2(8, 8)

[node name="CardTargetSelector" type="Node2D"]
script = ExtResource("1_4nd48")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 4
monitoring = false
monitorable = false
script = ExtResource("2_m6un0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_66gff")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="CardArc" parent="CanvasLayer" instance=ExtResource("1_c07u4")]
points = PackedVector2Array(-42, 10)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
